# autoware-playground

./: .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  README.md  plan.md  pytest.ini
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/workflows/: benchmark-nightly.yaml  lint.yaml  pages.yaml  scenario-sim-probe.yaml  smoke.yaml
assets/: README.md
assets/maps/sample_map/: asset.yaml
assets/scenarios/sample_lane_change/: asset.yaml
contracts/: README.md  failure_taxonomy.yaml
contracts/slots/: localization.pose_estimator.md  perception.objects3d.md  perception.occupancy_grid.md  planning.behavior.md  planning.motion.md  planning.trajectory.md  prediction.objects.md
contracts/topics/: common_topics.md
docker/: Dockerfile  compose.yaml  entrypoint.sh
docs/: adding_a_benchmark.md  adding_a_paper_method.md  ci.md  quickstart.md  reproducibility.md
docs/benchmark_cards/: README.md
reports/: README.md  leaderboard.html  leaderboard.json  leaderboard.md
repositories/: autoware-pinned.lock.yaml
schemas/: asset.schema.json  benchmark.schema.json  benchmark_assets.schema.json  expected_failures.schema.json  experiment.schema.json  failure_card.schema.json  metric.schema.json  result.schema.json
tests/: test_apg_cli.py
tools/apg/: pyproject.toml
tools/apg/apg/: __init__.py  assets.py  cli.py  compare.py  leaderboard.py  leaderboard_diff.py  preflight.py  report.py  run.py  schema.py
tools/apg/apg/runners/: __init__.py  base.py  rosbag_replay.py  scenario_simulator_v2.py
tools/scripts/: make_sample_rosbag.py
(+71 files in other folders)
