[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoware-playground-apg"
version = "0.1.0"
description = "CLI for autoware-playground manifest validation, dry runs, and reports."
requires-python = ">=3.10"
dependencies = [
  "jsonschema>=4.0",
  "PyYAML>=6.0"
]

[project.scripts]
apg = "apg.cli:main"

[tool.setuptools.packages.find]
where = ["."]
